Finish converting codebase to use UUIDs